objects/ssot__CaseProceedingResult__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CaseProceedingId__c</fullName>
        <label>Case Proceeding</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseProceedingResultStatus__c</fullName>
        <label>Case Proceeding Result Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseProceedingResultType__c</fullName>
        <label>Case Proceeding Result Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Case Proceeding Result Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718549027510_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseProceedingResult_CaseProceedingI_rel</label>
        <referenceTo>ssot__CaseProceeding__dlm</referenceTo>
        <relationshipLabel>CaseProceedingResult_CaseProceedingI_rel</relationshipLabel>
        <relationshipName>rel_1718549027510_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>